Styling for History window is borked in dark theme
Categories
(Firefox :: Theme, defect)
Tracking
()
People
(Reporter: 8vn27i9bc, Unassigned, NeedInfo)
References
Details
(Keywords: regressionwindow-wanted)
Attachments
(1 file)
83.98 KB,
image/png
|
Details |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:137.0) Gecko/20100101 Firefox/137.0
Steps to reproduce:
Pick the Dark theme. Open the History window ("Manage History").
Actual results:
Even row background color seems to be inherited from the default light theme. All other styling seems to work, rendering the text light thus making it impossible to read every other line.
Expected results:
Even rows should have a dark background when using the dark theme.
Comment 1•14 days ago
|
||
Can you provide a screenshot? Is that the default dark theme?
Comment 2•14 days ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Theme' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Screenshot of the reported problem. Worth noting is the text color in the search bar which is also not visible (it should say "bugzilla").
Comment 4•14 days ago
|
||
I assume someone would have reported this type of problem at this point, so I wonder if it's something else on your system.
Does it work if you start Firefox in Troubleshoot mode?
(In reply to Francesco Lodolo [:flod] from comment #4)
I assume someone would have reported this type of problem at this point, so I wonder if it's something else on your system.
Does it work if you start Firefox in Troubleshoot mode?
No, the problem persists in Troubleshoot Mode.
Comment 6•7 days ago
|
||
I can't seem to reproduce this in Firefox 138 on Ubuntu.
Regardless, if someone can still reproduce this in the latest release as well as Nightly, a regression range might be helpful.
Comment 7•7 days ago
|
||
Emilio, does this ring a bell? It reminds me of bug 1866022 but that was fixed a pretty long time ago.
Updated•7 days ago
|
Comment 8•7 days ago
|
||
Which GTK theme are you using? It's in about:support
-> OS theme
Updated•6 days ago
|
Updated•6 days ago
|
Comment 9•6 days ago
|
||
Hello! I have tried to reproduce the issue with firefox 140.0a1(2025-05-06) on Ubuntu 22.04, unfortunately I wasn't able to reproduce the issue on my end.
Could you please answer the following questions in order to further investigate this issue:
- Does this issue happen with a new profile? Here is a link on how to create one: https://support.mozilla.org/en-US/kb/profile-manager-create-remove-switch-firefox-profiles
- Does this issue happen in the latest nightly? Here is a link from where you can download it: https://www.mozilla.org/en-US/firefox/channel/desktop/
- Do you have any addons installed? If yes could you please list them?
Reporter | ||
Comment 10•5 days ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #8)
Which GTK theme are you using? It's in
about:support
-> OS theme
Adwaita / Adwaita-dark
Comment 11•5 days ago
|
||
Hello 8vn27i9bc! Could you please answer the questions from comment 9?
Description
•