widget/gtk/gtk3drawing.cpp
@@ -344,38 +344,6 @@ static gint moz_gtk_vpaned_paint(cairo_t* cr, GdkRectangle* rect,
   return MOZ_GTK_SUCCESS;
 }
 
-static gint moz_gtk_treeview_paint(cairo_t* cr, GdkRectangle* rect,
-                                   GtkWidgetState* state,
-                                   GtkTextDirection direction) {
-  gint xthickness, ythickness;
-  GtkStyleContext* style;
-  GtkStyleContext* style_tree;
-  GtkStateFlags state_flags;
-  GtkBorder border;
-
-  /* only handle disabled and normal states, otherwise the whole background
-   * area will be painted differently with other states */
-  state_flags =
-      state->disabled ? GTK_STATE_FLAG_INSENSITIVE : GTK_STATE_FLAG_NORMAL;
-
-  style =
-      GetStyleContext(MOZ_GTK_SCROLLED_WINDOW, state->image_scale, direction);
-  gtk_style_context_get_border(style, state_flags, &border);
-  xthickness = border.left;
-  ythickness = border.top;
-
-  style_tree =
-      GetStyleContext(MOZ_GTK_TREEVIEW_VIEW, state->image_scale, direction);
-  gtk_render_background(style_tree, cr, rect->x + xthickness,
-                        rect->y + ythickness, rect->width - 2 * xthickness,
-                        rect->height - 2 * ythickness);
-
-  style =
-      GetStyleContext(MOZ_GTK_SCROLLED_WINDOW, state->image_scale, direction);
-  gtk_render_frame(style, cr, rect->x, rect->y, rect->width, rect->height);
-  return MOZ_GTK_SUCCESS;
-}
-
 static gint moz_gtk_resizer_paint(cairo_t* cr, GdkRectangle* rect,
                                   GtkWidgetState* state,
                                   GtkTextDirection direction) {
@@ -644,16 +612,10 @@ gint moz_gtk_get_widget_border(WidgetNodeType widget, gint* left, gint* top,
                                // NOTE: callers depend on direction being used
                                // only for MOZ_GTK_DROPDOWN widgets.
                                GtkTextDirection direction) {
-  GtkWidget* w;
-  GtkStyleContext* style;
+  GtkWidget* w = nullptr;
   *left = *top = *right = *bottom = 0;
 
   switch (widget) {
-    case MOZ_GTK_TREEVIEW: {
-      style = GetStyleContext(MOZ_GTK_SCROLLED_WINDOW);
-      moz_gtk_add_style_border(style, left, top, right, bottom);
-      return MOZ_GTK_SUCCESS;
-    }
     case MOZ_GTK_TABPANELS:
       w = GetWidget(MOZ_GTK_TABPANELS);
       break;
@@ -748,8 +710,6 @@ gint moz_gtk_widget_paint(WidgetNodeType widget, cairo_t* cr,
   cairo_new_path(cr);
 
   switch (widget) {
-    case MOZ_GTK_TREEVIEW:
-      return moz_gtk_treeview_paint(cr, rect, state, direction);
     case MOZ_GTK_FRAME:
       return moz_gtk_frame_paint(cr, rect, state, direction);
     case MOZ_GTK_RESIZER:
